--- a/Pages/Game.razor
+++ b/Pages/Game.razor
@@ -43,14 +43,24 @@ else
 {
     <h1>Game Code: @currentSession.PinCode</h1>
     <button type="button" class="btn btn-warning mb-2" @onclick="OnLeaveGame">Leave Game</button>
+    <button type="button" id="refresh-button" style="display: none" @onclick="OnRefreshGame"></button>
+
+    if (currentPlayers.Any())
+    {
+        <h3>Players</h3>
+        <ul>
+            @foreach (var player in currentPlayers)
+            {
+                <li>@player.Name</li>
+            }
+        </ul>
+    }
 }
-
-
-
 
 @code {
     StartGameModel startGameModel = new();
     PlayerSessionModel? currentSession = null;
+    List<Player> currentPlayers = new();
 
     private async Task OnEnterGame()
     {
@@ -67,13 +77,14 @@ else
 
         if (currentSession != null)
         {
+            currentPlayers = await _sessionService.GetPlayers(currentSession.PinCode);
             startGameModel = new();
         }
     }
 
     private async Task OnLeaveGame()
     {
-        if(currentSession != null)
+        if (currentSession != null)
         {
             var connectionId = await JS.InvokeAsync<string>("Game.GetConnectionId");
             await _sessionService.LeaveGame(connectionId, currentSession.PinCode);
@@ -85,6 +96,10 @@ else
     private async Task OnRefreshGame()
     {
         var connectionId = await JS.InvokeAsync<string>("Game.GetConnectionId");
+        if (currentSession != null)
+        {
+            currentPlayers = await _sessionService.GetPlayers(currentSession.PinCode);
+        }
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
