--- a/BlazorGame/Pages/Game.razor
+++ b/BlazorGame/Pages/Game.razor
@@ -3,45 +3,13 @@
 @if (currentSession == null)
 {
     <h3>Start a new game</h3>
-
-    <EditForm Model="@startGameModel" OnValidSubmit="@OnEnterGame">
-        <DataAnnotationsValidator />
-        <ValidationSummary />
-
-        <div class="form-group">
-            <label for="username" class="font-weight-bold mr-2">Game Mode</label>
-            <small id="mode-help" class="form-text text-muted">Start a new game or join an existing one.</small>
-            <InputRadioGroup Name="gameMode" @bind-Value="startGameModel.Mode" class="form-control">
-                <InputRadio Name="gameMode" Value="JoinMode.CreateNew" class="mr-2" />Create New
-                <InputRadio Name="gameMode" Value="JoinMode.JoinExisting" class="mx-2" />Join Existing<br>
-            </InputRadioGroup>
-        </div>
-
-        <hr />
-
-        <div class="form-row align-items-center">
-            <div class="col-auto">
-                <label for="username" class="font-weight-bold mr-2">Username</label>
-                <input type="text" class="form-control" id="username-input" aria-describedby="username-help" @bind-value="startGameModel.Username">
-                <small id="username-help" class="form-text text-muted">Enter a short username.</small>
-            </div>
-            <div class="col-auto">
-                <label for="pin-input" class="font-weight-bold mr-2">PIN</label>
-                <input type="number" class="form-control" id="pin-input" aria-describedby="pin-help" maxlength="4" @bind-value="startGameModel.PINCode">
-                <small id="pin-help" class="form-text text-muted">Enter a 4-digit PIN code for this game.</small>
-            </div>
-            <div class="col-auto">
-                <button type="submit" id="join-button" class="btn btn-primary mb-2">Go!</button>
-            </div>
-        </div>
-    </EditForm>
-
+    <JoinGame OnJoinedGame="OnJoinGame"></JoinGame>
 }
 else
 {
     <h1>Game Code: @currentSession.PinCode</h1>
     <button type="button" class="btn btn-warning mb-2" @onclick="OnLeaveGame">Leave Game</button>
-    
+
     <button type="button" id="refresh-button" style="display: none" @onclick="OnRefreshGame"></button>
 
     if (currentPlayers.Any())
@@ -66,7 +34,7 @@ else
                 }
             </tbody>
         </table>
+
+        <button type="button" @ref="_dealButton" style="display: none" class="mt-5 btn btn-info">Deal</button>
     }
 }
-
-<button type="button" id="deal-button" style="display: none" class="mt-5 btn btn-info">Deal</button>
