Allow players to take turns in playing cards

--- a/BlazorGame/Components/PlayingCard.razor
+++ b/BlazorGame/Components/PlayingCard.razor
@@ -1,12 +1,26 @@
 ﻿
 
-<li class="list-inline-item">
-    <span class="p-card rank-@Value.Name @Value.Icon">
+@if (Value is not null)
+{
+    <a class="p-card rank-@Value.Name @Value.Icon" @onclick="OnCardClick" href="#">
         <span class="rank">@Value.Name</span>
         <span class="suit"></span>
-    </span>
-</li>
-    @code {
-        [Parameter]
-        public Card Value { get; set; }
+    </a>
+}
+
+
+@code {
+    [Parameter]
+    public Card? Value { get; set; }
+
+    [Parameter]
+    public EventCallback<Card> OnCardClicked { get; set; }
+
+    private async Task OnCardClick()
+    {
+        if (OnCardClicked.HasDelegate)
+        {
+            await OnCardClicked.InvokeAsync(Value);
+        }
     }
+}
